complex css practice tool created

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="sources/app.js"></script>
     <script src="sources/scrollController.js"></script>
     <script src="sources/toyController.js"></script>
+    <script src="sources/complexCssController.js"></script>
 
     <link rel="stylesheet" href="resources/main.css">
 </head>
