fix background issue, halted animations

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Angular UI</title>
+    <title>Backbox CSS Tech Talk</title>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="resources/main.css">
 </head>
 <body ng-app="app" ng-controller="scrollController as scrollCtrl">
-    <div class="flex-container flex-horizontal background">
+    <div class="flex-container flex-horizontal holder">
         <img class="dragon" src="resources/img/leftArrow.png" ng-click="scrollCtrl.previous();" />
         <section class="plaque ui-view-container">
             <div ui-view></div>
