--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="sources/scrollController.js"></script>
     <script src="sources/toyController.js"></script>
     <script src="sources/complexCssController.js"></script>
+    <script src="sources/flexController.js"></script>
 
     <link rel="stylesheet" href="resources/main.css">
 </head>
